--- a/Quiz.html
+++ b/Quiz.html
@@ -204,8 +204,10 @@
     }
 
     function solveQuiz() {
+      // Redirect to the quiz or perform the desired action
       alert('ستتم إعادة توجيهك إلى اختبار الأسلاميات!');
-      // Here you can add logic to redirect to the quiz or open a new page
+      // For example, you can redirect to another URL:
+      // window.location.href = 'URL_TO_YOUR_QUIZ';
     }
   </script>
 </body>
